...
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="end" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/bottomAppBar"
            app:srcCompat="@drawable/ic_attach_money_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
